--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -26,16 +26,14 @@
                 placeholder="Search GitHub user" style="margin-bottom: 10px; margin-top: 10px">
               <button type="submit" (click)="search(username.value)" id="search"
                 class="btn btn-outline-info btn-lg btn-block">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
-                  viewBox="0 0 16 16">
-                  <path
-                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-                </svg>
+                
               </button>
             </div>
           </form>
         </div>
-        <!-- <div *ngFor='let quote of quotes; let i = index;' class="card shadow-sm p-3 mb-3 bg-body rounded"> -->
+        <div>
+          <h5>Repositories</h5>
+        </div>
         <div *ngFor="let repo of repos; index as i">
           <div class="card shadow-md p-3 mb-3 bg-body rounded">
             <h3>{{ repo.name }} <i *ngIf="repo.fork" class="fas fa-code-branch fa-xs"></i> <span
