--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <!-- <app-landing></app-landing> -->
-<app-profile></app-profile>
+<app-navbar></app-navbar>
+<!-- 
+<app-profile></app-profile> -->
+<router-outlet></router-outlet>
