--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -5,18 +5,16 @@
 
     <div class="row">
       <div class="col-md-5">
-        <h1>Profile</h1>
+        <h1 style="color: navy; margin-bottom:10%">User Profile</h1>
         <div id="user_profile"> <img src="{{usr.avatar_url}}" alt=""></div>
         <p>{{usr.login}}</p>
         <p>{{usr.bio}}</p>
-        <p>User</p>
+        <p>Signedup on : {{usr.created_at| date}}</p>
         <p>{{usr.location}}</p>
-        Member since:<p>{{usr.created_at}}</p>
         <div class="d-flex justify-content-start">
           Following<div class="f1 following">{{usr.following}}</div>
           Followers <div class="f1">{{usr.followers}}</div>
         </div>
-
       </div>
       <div class="col-md-7">
         <div class="">
@@ -26,26 +24,33 @@
                 placeholder="Search GitHub user" style="margin-bottom: 10px; margin-top: 10px">
               <button type="submit" (click)="search(username.value)" id="search"
                 class="btn btn-outline-info btn-lg btn-block">
-                
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                </svg>
               </button>
             </div>
           </form>
         </div>
-        <div>
-          <h5>Repositories</h5>
+        <div class="repoLabel">
+          <h3>Repositories</h3>
         </div>
+        <!-- <div *ngFor='let quote of quotes; let i = index;' class="card shadow-sm p-3 mb-3 bg-body rounded"> -->
         <div *ngFor="let repo of repos; index as i">
           <div class="card shadow-md p-3 mb-3 bg-body rounded">
-            <h3>{{ repo.name }} <i *ngIf="repo.fork" class="fas fa-code-branch fa-xs"></i> <span
-                style="font-size:12px; float:right; color:rgb(27, 143, 179); background-color: #393c40"
-                class="badge badge-secondary">{{ repo.language }}</span></h3>
+            <h4>{{ repo.name }} <i *ngIf="repo.fork" class="fas fa-code-branch fa-xs"></i> <span
+                style="font-size:12px; float:right; color:navy; background-color: goldenrod"
+                class="badge">{{ repo.language }}</span></h4>
             <p>{{ repo.description }}</p>
-            <a href="{{ repo.html_url }}" target="_blank">
-              <button style="color:rgb(27, 143, 179);" class="btn btn-dark">view on GitHub <i
-                  class="fab fa-github"></i></button>
-            </a>
-            <div class="date">
-              <small><span class="text-muted">last modified:</span> {{ repo.updated_at|dateCount}}</small>
+            <div class="d-flex justify-content-between">
+
+              <a href="{{ repo.html_url }}" target="_blank">
+                <button style="color: white; background-color:navy" class="btn btn-info">View on GitHub <i
+                    class="fab fa-github"></i></button>
+              </a>
+              <small style="margin-top: 6%"><span class="text-muted">Last modified:</span> {{ repo.updated_at| date
+              }}</small>
             </div>
           </div>
         </div>
