--- a/src/app/component/landing/landing.component.html
+++ b/src/app/component/landing/landing.component.html
@@ -1,3 +1,21 @@
-<div class="container">
-  <p>Welcome to Gitsearch</p>
-</div>
+
+  <!-- <section class="introduction">
+    <div id="landingPage">
+      <img src="assets/logo/logo.png" alt="">
+      <p id="welcome">WELCOME <br> TO GIT-SEARCH</p>
+      <p>Amazing people are making amazing designs in a fun environment</p>
+      <img src="assets/mouse_click.png" alt="">
+    </div>
+
+  </section> -->
+  <section id="home">
+    <div id="overlay">
+      <div class="profilePhoto">
+        <img src="images/6.jpg" alt="">
+      </div>
+      <div class="intro">
+        <h1 id="welcome">WELCOME TO GIT-SEARCH</h1>
+      </div>
+    </div>
+  </section>
+  
