--- a/src/app/component/landing/landing.component.html
+++ b/src/app/component/landing/landing.component.html
@@ -1,21 +1,13 @@
-
-  <!-- <section class="introduction">
-    <div id="landingPage">
-      <img src="assets/logo/logo.png" alt="">
-      <p id="welcome">WELCOME <br> TO GIT-SEARCH</p>
-      <p>Amazing people are making amazing designs in a fun environment</p>
-      <img src="assets/mouse_click.png" alt="">
-    </div>
-
-  </section> -->
-  <section id="home">
-    <div id="overlay">
-      <div class="profilePhoto">
-        <img src="images/6.jpg" alt="">
-      </div>
-      <div class="intro">
-        <h1 id="welcome">WELCOME TO GIT-SEARCH</h1>
+  <section class="container">
+    <div id="text" class="d-flex align-items-center justify-content-center">
+      <div class="text-center ">
+        <h1 id=" welcome">WELCOME TO GIT-SEARCH</h1>
+        <div class="description">
+          <p>GitHub is where over 65 million developers shape the future of software, together. Contribute to the open
+            source community, manage your Git repositories</p>
+          <p>a simple github user search tool</p>
+          <h5 class="copyright">© 2019 Copyright: Joy Kolia</h5>
+        </div>
       </div>
     </div>
   </section>
-  
