--- a/src/app/component/landing/landing.component.html
+++ b/src/app/component/landing/landing.component.html
@@ -1,11 +1,11 @@
   <section class="container">
     <div id="text" class="d-flex align-items-center justify-content-center">
       <div class="text-center ">
-        <h1 id=" welcome">WELCOME TO GIT-SEARCH</h1>
+        <h1 id="welcome">WELCOME TO GIT-SEARCH</h1>
         <div class="description">
-          <p>GitHub is where over 65 million developers shape the future of software, together. Contribute to the open
+          <p>GitHub is where over 65 million developers shape the future of software, together.</p><p> Contribute to the open
             source community, manage your Git repositories</p>
-          <p>a simple github user search tool</p>
+          <p>Our app is a simple github user navigation tool for GitHub</p>
           <h5 class="copyright">© 2019 Copyright: Joy Kolia</h5>
         </div>
       </div>
