--- a/src/app/component/landing/landing.component.css
+++ b/src/app/component/landing/landing.component.css
@@ -3,7 +3,7 @@
   font-weight: 700;
 }
 #welcome{
-color: navy;
+color: #1a2555;
 font-size: 45pt;
 margin-bottom: 2%;
 }
@@ -11,6 +11,6 @@ margin-bottom: 2%;
     color:goldenrod;
 }
 .copyright{
-    color: navy;
+    color: #1a2555;
 
 }
