--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -5,7 +5,7 @@
 
     <div class="row">
       <div class="col-md-5">
-        <h1 style="color: navy; margin-bottom:10%">User Profile</h1>
+        <h1 style="color: #1a2555; margin-bottom:10%">User Profile</h1>
         <div id="user_profile"> <img src="{{usr.avatar_url}}" alt=""></div>
         <p>{{usr.login}}</p>
         <p>{{usr.bio}}</p>
@@ -34,19 +34,19 @@
           </form>
         </div>
         <div class="repoLabel">
-          <h3>Repositories</h3>
+          <h3 style="color:#1a2555">Repositories</h3>
         </div>
         <!-- <div *ngFor='let quote of quotes; let i = index;' class="card shadow-sm p-3 mb-3 bg-body rounded"> -->
         <div *ngFor="let repo of repos; index as i">
           <div class="card shadow-md p-3 mb-3 bg-body rounded">
-            <h4>{{ repo.name }} <i *ngIf="repo.fork" class="fas fa-code-branch fa-xs"></i> <span
+            <h4 style="color:goldenrod">{{ repo.name }} <i *ngIf="repo.fork" class="fas fa-code-branch fa-xs"></i> <span
                 style="font-size:12px; float:right; color:navy; background-color: goldenrod"
                 class="badge">{{ repo.language }}</span></h4>
             <p>{{ repo.description }}</p>
             <div class="d-flex justify-content-between">
 
               <a href="{{ repo.html_url }}" target="_blank">
-                <button style="color: white; background-color:navy" class="btn btn-info">View on GitHub <i
+                <button style="color: white; background-color:#1a2555" class="btn btn-info">View on GitHub <i
                     class="fab fa-github"></i></button>
               </a>
               <small style="margin-top: 6%"><span class="text-muted">Last modified:</span> {{ repo.updated_at| date
