--- a/src/app/component/profile/profile.component.css
+++ b/src/app/component/profile/profile.component.css
@@ -1,28 +1,47 @@
  #username {
-  border-color: blue;
-} */
+   border-color: blue;
+ }
 
-#user_profile {
-  width: 80%;
-  height: auto;
-  border-radius: 50%;
+ #user_profile {
+   width: 80%;
+   height: auto;
+   border-radius: 50%;
 
-}
+ }
 
-#user_profile img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
+ #user_profile img {
+   width: 100%;
+   height: 100%;
+   border-radius: 50%;
+ }
 
-}
+ .following {
+   margin-right: 10%;
+ }
 
-.following{
-  margin-right: 10%;
-}
-.f1{
-  padding-left: 3%;
-}
-.repoLabel{
-  margin-top: 6%;
-}
+ .f1 {
+   padding-left: 2%;
+   color: coral;
+ }
 
+ .repoLabel {
+   margin-top: 6%;
+ }
+
+ .userInfo {
+   font-size: 18px;
+   font-weight: 500;
+   margin-top: 10%;
+   color: #1a2555;
+
+ }
+
+ .uname {
+   color: #1a2555;
+   font-weight: 700;
+   font-size: 30px;
+ }
+
+ main {
+   margin-top: 5%
+ }
